Colaboratory を使用して作成しました

--- a/ja/05_graphillion_and_zdd.ipynb
+++ b/ja/05_graphillion_and_zdd.ipynb
@@ -7,22 +7,32 @@
       "display_name": "Python 3"
     },
     "colab": {
-      "name": "05_graphillion_and_zdd.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/yurahuna/graphillion_tutorial/blob/master/ja/05_graphillion_and_zdd.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "YAmpRaxErGgO"
       },
       "source": [
-        "# Graphillionの内部\n",
+        "# Inside Graphillion\n",
         "\n",
-        "Graphillionを用いることでなぜ数え上げお姉さん問題を効率的に解けるのかを知るためには，Graphillionの内部構造を知ることが不可欠です．Graphillionの内部では**ゼロサプレス型二分決定グラフ（ZDD）**とよばれるデータ構造が利用されています．ZDDを用いると，グラフ集合を非常に小さな形で表現することができます．さらに，グラフ集合に対する各種演算を効率的に実行することも可能です．\n",
+        "To understand why Graphillion can solve the counting-up sisters problem so efficiently, it is essential to understand the internal structure of Graphillion. ZDDs allow graph sets to be represented in a very small amount of memory. ZDDs also allow for the efficient execution of various operations on graph sets.\n",
         "\n",
-        "なお，GraphillionからはZDDの存在は完全に隠蔽されており，ZDDの存在を意識せずとも利用できるようになっています．一方で，Graphillionをより使いこなすためにはZDDを理解することが重要となってきます．"
+        "The existence of ZDDs is completely hidden from Graphillion, so that users can use ZDDs without being aware of their existence. On the other hand, it is important to understand ZDDs in order to get the most out of Graphillion."
       ]
     },
     {
@@ -31,23 +41,23 @@
         "id": "TbeQS6XFrGgS"
       },
       "source": [
-        "## ゼロサプレス型二分決定グラフ (ZDD)\n",
+        "## Zero-suppressed binary decision diagram (ZDD)\n",
         "\n",
-        "まずZDDについて簡単に解説します．より詳しい説明は文献などを参照ください．ZDDは組合せの集合をグラフの形で表現するデータ構造です．Graphillionはグラフの集合をZDDという別のグラフを用いて表しているといえます．ちょっとややこしいですね．\n",
+        "First, we show a brief description of ZDDs. A ZDD is a data structure that represents a set of combinations in the form of a graph; Graphillion can represent a set of graphs using another graph called a ZDD.\n",
         "\n",
-        "いま3つの数字 1, 2, 3に対して，組合せ $\\{1, 2\\}, \\{2, 3\\}, \\{3, 1\\} $  からなる集合を考えます．この集合をZDDを用いて表すと，下の図のようになります．\n",
+        "Consider the set of combinations $\\{\\{1, 2\\}, \\{2, 3\\}, \\{3, 1\\}\\}$ for three numbers 1, 2, 3. This set can be represented using ZDD as shown in the figure below.\n",
         "\n",
-        "![sample_zdd](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/05/sample_zdd.png?raw=1)\n",
+        "! [sample_zdd](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/05/sample_zdd.png?raw=1)\n",
         "\n",
-        "ZDDは楕円と長方形の2種類の頂点と，破線と実践の矢印（有向辺）からなる有向グラフです．楕円形の頂点に記載された数字はその頂点が対応する要素を表現しています．3つの組合せ$\\{1, 2\\}, \\{2, 3\\}, \\{3, 1\\} $ は，ZDDの最上位の頂点（根とよぶ）から1と書かれた最下位の頂点までの3つの経路にそれぞれ対応しています．各経路に対して，経路中に含まれるある頂点から，実践の辺をたどって次の頂点に移動したときに，その頂点に記されている要素が組合せに含まれるとすると，経路から対応する組合せを得ることができます．\n",
+        "ZDD is a directed graph consisting of two types of vertices, elliptical and rectangular, and dashed and solid arrows (directed edges). The numbers on the vertices of an ellipse represent the elements to which that vertex corresponds: the three combinations $\\{1, 2\\}, \\{2, 3\\}, \\{3, 1\\} $ correspond to the three paths from the highest vertex (called the root) of the ZDD to the lowest vertex labeled 1, respectively. For each path, we can obtain the corresponding combination from the path if, when we move from one vertex in the path to the next vertex following solid edges, the element marked on that vertex is included in the combination.\n",
         "\n",
-        "例えば，根から実践，破線，実践の順に辺を辿る経路は1と書かれた終端頂点に到達します．この経路は１, 3を含んで2を含まない組合せ$\\{1, 3\\}$を表現しています．\n",
+        "For example, a path that follows the edges from the root to the solid edge, the dashed edge, and the solid edge in that order reaches a terminal vertex marked 1. This path represents the combination $\\{1, 3\\}$ that contains 1, 3 and does not contain 2.\n",
         "\n",
-        "ZDDは組合せの集合を有向グラフ中の経路の集まりとして表現します．この表現の利点として，多数の組合せからなる集合を小さなグラフとして表現できるという点が挙げられます．\n",
+        "ZDD represents a set of combinations as a collection of paths in a directed graph. The advantage of this representation is that a set of many combinations can be represented as a small graph.\n",
         "\n",
-        "![saple_zdd_dense](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/05/sample_zdd_dense.png?raw=1)\n",
+        "! [saple_zdd_dense](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/05/sample_zdd_dense.png?raw=1)\n",
         "\n",
-        "上の図は，組合せ$\\{\\}, \\{1\\}, \\{2\\}, \\{3\\}, \\{1, 2\\}, \\{2, 3\\}, \\{1, 3\\}, \\{1, 2, 3\\}$からなる組合せの集合を表すZDDです．4つの頂点からなるZDDで8個の組合せからなる集合を表現できるため，組合せの集合を簡潔に表現できます．"
+        "The above figure shows a ZDD representing a set of combinations $\\{\\}, \\{1\\}, \\{2\\}, \\{3\\}, \\{1, 2\\}, \\{2, 3\\}, \\{1, 3\\}, \\{1, 2, 3\\}$. ZDDs with four vertices can represent a set of eight combinations."
       ]
     },
     {
@@ -56,11 +66,11 @@
         "id": "i4RqphD4rGgT"
       },
       "source": [
-        "## GraphillionとZDD\n",
+        "## Graphillion and ZDDs\n",
         "\n",
-        "ZDDがGraphillion中でどのように利用されているかをみていきます．Graphillonの`GraphSet` クラスはグラフの集合を表現していると[前章](04_graphillion_first_step.ipynb)で説明しました．`GraphSet`オブジェクトはグラフの集合をZDDとして表現しています．\n",
+        "Let's look at how ZDDs are used in Graphillion. As explained in [previous chapter](04_graphillion_first_step.ipynb), the `GraphSet` class in Graphillion represents a set of graphs. The `GraphSet` object represents a set of graphs as a ZDD.\n",
         "\n",
-        "具体的な例を見てみましょう．Graphillionでは `GraphSet`の内部のZDDを明示的に取り出すためのメソッドは提供されていないので，ZDDを取り出すための関数を`tutorial_util.py`に準備しました．まずは前章と同様にグリッドグラフの対角頂点間を結ぶ経路の集合を表す`GraphSet`を求めてみましょう．"
+        "Since Graphillion does not provide a method to explicitly retrieve ZDDs inside a `GraphSet`, we prepared a function in `tutorial_util.py` to retrieve ZDDs. First, as in the previous section, let's find a `GraphSet` that represents the set of paths connecting the diagonal vertices of a grid graph."
       ]
     },
     {
@@ -94,7 +104,7 @@
         "id": "cBdhZEKWrGgb"
       },
       "source": [
-        "まずは`universe`を設定します．今回は小さいグリッドグラフを設定します．"
+        "First, set up the `universe`. This time, we will set up a small grid graph."
       ]
     },
     {
@@ -116,7 +126,7 @@
         "id": "OCjU_AOArGgg"
       },
       "source": [
-        "次に対角頂点間を結ぶ経路の集合を表す`GraphSet`オブジェクトを作成します．"
+        "Next, create a `GraphSet` object that represents the set of paths connecting the diagonal vertices."
       ]
     },
     {
@@ -137,7 +147,7 @@
         "id": "XF9OooVbrGgk"
       },
       "source": [
-        "`paths`は12個の経路からなる`GraphSet`オブジェクトです．では`paths`に対応するZDDをみてみましょう．"
+        "`paths` is a `GraphSet` object with 12 paths. Now let's look at the ZDDs corresponding to the `paths`."
       ]
     },
     {
@@ -157,11 +167,11 @@
         "id": "OaqcyQW5rGgn"
       },
       "source": [
-        "`draw_zdd(paths, universe)`は，このチュートリアルのために用意した`paths`に対応するZDDを描画するメソッドです．`GraphSet`はグラフ集合を辺の組合せの集合として表現しています．そのため，ZDDの楕円ノードのラベルは`universe`中の各辺に対応しています．\n",
+        "`draw_zdd(paths, universe)` is a method to draw ZDDs corresponding to `paths` prepared for this tutorial. The `GraphSet` represents a graph set as a set of edge combinations. Therefore, the labels of the elliptic nodes in the ZDD correspond to the edges in the `universe`.\n",
         "\n",
-        "上のZDDを見てみると，根から1終端頂点までの経路が全部で12通りあることが分かります．この各経路が`paths`が表すグラフ集合に含まれる部分グラフに対応しています．\n",
+        "Looking at the ZDD above, we can see that there are a total of 12 paths from the root to 1-terminal vertex. Each of these paths corresponds to a subgraph in the set of graphs represented by `paths`.\n",
         "\n",
-        "次にこのZDDの大きさを見てみましょう．ZDDのノード数は`zdd_size`メソッドで確認できます．"
+        "Next, let's look at the size of the ZDD; the number of nodes in the ZDD can be checked using the `zdd_size` method."
       ]
     },
     {
@@ -181,9 +191,9 @@
         "id": "MitfZFjJrGgq"
       },
       "source": [
-        "12個の経路の集合を表す`paths`を27頂点からなるZDDとして表現できていることが分かります．この例だとZDDを内部表現として用いることの嬉しさが分かりづらいですね．\n",
+        "You can see that `paths`, which represents a set of 12 paths, can be represented as a ZDD with 27 vertices. In this example, it is difficult to see the merit of using ZDDs as an internal representation.\n",
         "\n",
-        "次の例ではZDDの効果はより顕著になります．"
+        "In the following example, the effect of ZDDs is more pronounced."
       ]
     },
     {
@@ -205,7 +215,7 @@
         "id": "QSOpTMozrGgs"
       },
       "source": [
-        " 8x8グリッドグラフだと経路の総数は指数的に増加します．"
+        "In an 8x8 grid graph, the total number of paths increases exponentially."
       ]
     },
     {
@@ -225,7 +235,7 @@
         "id": "ueeEYIttrGgv"
       },
       "source": [
-        "`paths`を表すZDDの頂点数も増加しますが，経路の総数と比べると大幅に小さな値になります．"
+        "The number of ZDD vertices representing `paths` is also increased, but by a much smaller amount than the total number of paths."
       ]
     },
     {
@@ -245,17 +255,17 @@
         "id": "qyxj6EwPrGgx"
       },
       "source": [
-        "このように，膨大な数の部分グラフからなるグラフ集合をZDDを用いることで小さく表現することによって，Graphillionは数え上げお姉さん問題を高速に解くことができます．\n",
+        "Thus, by using ZDD to represent a graph set consisting of a huge number of subgraphs in a small form, Graphillion is able to solve the counting sister problem very quickly.\n",
         "\n",
-        "なぜZDDはお姉さん問題の解の集合を小さく表現できるのでしょうか．それは，お姉さん問題の解である部分グラフ集合中に似た部分グラフが多数存在するからです．似た部分グラフはZDDの根から1-終端頂点までの経路の形で表現しても共通する部分が多い経路となります．\n",
+        "Why is ZDD able to represent the solution set of the counting sister problem so small? The reason is that there are many similar subgraphs in the set of subgraphs that are solutions to the counting sister problem. Similar subgraphs can be expressed in the form of a path from the root of ZDD to the 1-terminal vertex, which has many parts in common.\n",
         "\n",
-        "以下の2つの経路を見てみましょう．\n",
+        "Let's look at the following two paths.\n",
         "\n",
-        "<img src=\"https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/05/similar_paths.png?raw=1\" alt=\"類似の経路の例\" style=\"height: 200px;\"/>\n",
+        "<img src=\"https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/05/similar_paths.png?raw=1\" alt=\"Example of similar path\" style=\"height: 200px;\"/>\n",
         "\n",
-        "これらの経路`[(1, 2), (2, 3), (3, 6), (6, 9)]`, `[(1, 2), (2, 3), (3, 6), (6, 5), (5, 8), (8, 9)]`は辺`(1, 2), (2, 3), (3, 6)]` を共有しています．上の`paths`を表現するZDDをよく眺めてみると，共通する辺はまとめて表現されているのが分かります．\n",
+        "These paths `[(1, 2), (2, 3), (3, 6), (6, 9)]` and `[(1, 2), (2, 3), (3, 6), (6, 5), (5, 8), (8, 9)]` share the edges `[(1, 2), (2, 3), (3, 6)]`. If you look closely at the ZDDs representing the `paths` above, you will see that the common edges are represented together.\n",
         "\n",
-        "このように，ZDDは共通する経路をまとめあげて表現することによって，対象のグラフ集合を小さく表現できるのです．"
+        "Thus, ZDDs can represent a small set of graphs by grouping common paths together."
       ]
     },
     {
@@ -264,15 +274,15 @@
         "id": "qOh-EFCRrGgx"
       },
       "source": [
-        "## ZDDの利点\n",
+        "## Advantages of ZDDs\n",
         "\n",
-        "ZDDを用いることの利点はグラフ集合を小さく表現できるだけではありません．ZDDが備えている重要な特徴として，ZDDの大きさに比例する時間で様々な演算を実行できるというものがあります．代表的な例として，ZDDには，含まれる要素の数を効率的に数え上げられるという特徴があります．Graphillionでは，`GraphSet`オブジェクト`gs`に対して`len(gs)`を実行することで，`gs`に含まれる部分グラフの数を求めることができますが，この計算にもZDDが活用されています．\n",
+        "The advantages of using ZDDs go beyond the ability to represent small graph sets; an important feature of ZDDs is the ability to perform a variety of operations in a time proportional to the size of the ZDD. As a typical example, ZDDs are capable of efficiently counting up the number of elements contained in a graph, as in the case of Graphillion, where the number of subgraphs contained in a `gs` can be computed by performing `len(gs)` on a `GraphSet` object `gs`. ZDD is also utilized in this calculation.\n",
         "\n",
-        "辺の重みの和が最小，最大のグラフを求める操作もZDDの頂点数に比例する計算時間で実行できます．この特徴を活用することで最長経路問題のような難しいグラフ上の最適化問題を解くことができます．\n",
+        "The operation to find the graph with the smallest and largest sum of edge weights can also be performed in a computation time proportional to the number of vertices in the ZDD. This feature can be used to solve difficult optimization problems on graphs such as the longest path problem.\n",
         "\n",
-        "そのほかにも，グラフの集合に対して何らかの条件を加えて，別の集合を作り出すようなことも可能です．次章で紹介する`GraphSet`クラスのメソッド群には，ほぼすべて対応するZDDの演算が存在します．\n",
+        "Other operations are also possible, such as adding conditions to a set of graphs to create another set of graphs. Almost all of the methods of the `GraphSet` class introduced in the next chapter have corresponding ZDD operations.\n",
         "\n",
-        "このように，組合せの集合を圧縮して表現した上で，圧縮した表現に比例する時間で様々な計算を柔軟に実行できることがZDDの最大の利点です．"
+        "Thus, the greatest advantage of ZDD is the ability to compress and represent a set of combinations and then flexibly perform various calculations in a time proportional to the compressed representation."
       ]
     },
     {
@@ -281,24 +291,22 @@
         "id": "KNuE6FqYrGgy"
       },
       "source": [
-        "## ZDDの欠点\n",
-        "ZDDはグラフの集合を圧縮して表現し，ZDDの大きさに比例する計算時間で様々な計算を実行できる道具です．つまり，グラフの集合を表現するZDD自体が巨大になるケースでは計算に時間がかかるという課題があります．具体的には\n",
-        "- `universe`が1000頂点以上．\n",
-        "- `universe`が密なグラフ（辺の数が頂点の数よりもずっと大きい）\n",
+        "## Disadvantages of ZDDs\n",
+        "ZDDs are tools that compress and represent a set of graphs and can perform various calculations in a computation time proportional to the size of the ZDD. In other words, when the ZDD itself, which represents a set of graphs, is large, the computation takes a long time. Specifically, the ZDD becomes huge in the following cases and the computation tends to take an unrealistic amount of time.\n",
+        "- The number of `universe` is more than 1000 vertices.\n",
+        "- The `universe` is a dense graph (the number of edges is much larger than the number of vertices).\n",
         "\n",
-        "といったケースでZDDが巨大になり，現実的な時間で計算ができない傾向があります．\n",
+        "Another drawback is that it is difficult to predict how much the size of the ZDD will increase or decrease depending on the operations performed on the `GraphSet` object. [Chapter 9](09_graphillion_practical_guide.ipynb) provides guidelines for applying Graphillion to real-world problems.\n",
         "\n",
-        "また，`GraphSet`オブジェクトに対して行う演算によってどれだけZDDの大きさが増減するのかが予想しづらいという欠点もあります．[9章](09_graphillion_practical_guide.ipynb) ではGraphillionを現実の問題に適用する際の指針について説明します．\n",
+        "## Summary of this chapter\n",
+        "This chapter has described ZDDs, the data structures used within Graphillion, which contain the latest research results on ZDDs. If you are interested in the technical details, please refer to the references.\n",
         "\n",
-        "## この章のまとめ\n",
-        "この章ではGraphillionの内部で利用されているデータ構造であるZDDについて解説しました．GraphillionにはZDDに関する最新の研究成果が詰め込まれています．技術的な詳細に興味のある方は参考文献を参照ください．\n",
-        "\n",
-        "次章以降ではGraphillionを用いて問題を解く方法をいくつか紹介します．まず[次章](06_graph_set.ipynb) で`GraphSet`クラスの機能と，Graphillionを用いた問題解決の流れについて説明します．\n",
+        "In the following chapters, we will show you several ways to solve problems using Graphillion. First, [next chapter](06_graph_set.ipynb) explains the function of the `GraphSet` class and the flow of problem solving using Graphillion.\n",
         "\n",
         "\n",
-        "## 参考文献\n",
-        "- [湊真一（編） 超高速グラフ列挙アルゴリズム〈フカシギの数え方〉が拓く，組合せ問題への新アプローチ](https://www.morikita.co.jp/books/book/2838) GraphillionとZDDに関する詳細な解説，およびGraphillionの応用例が掲載されています．Graphillionを使いこなしたい方におすすめです．\n",
-        "- [Donald E. Knuth（著）The Art of Computer Programming Volume 4A Combinatorial Algorithms Part1 日本語版](https://www.kadokawa.co.jp/product/301702000134/) 有名なアルゴリズムの教科書の日本語版です．日本語で読める書籍の中では最もZDDに関する説明が充実しています．難易度は高めです．"
+        "## References\n",
+        "- [Donald E. Knuth (Author) The Art of Computer Programming Volume 4A Combinatorial Algorithms Part1](https://www.amazon.co.jp/Art-Computer-Programming-Combinatorial-Algorithms/dp/0201038048) This is the Japanese edition of the famous algorithm textbook. It has the most extensive explanation of ZDDs among the books available in Japanese. The level of difficulty is high.\n",
+        "- [Shin-ichi Minato (ed.) Ultrafast Graph Enumeration Algorithm: A New Approach to Combinatorial Problems](https://www.morikita.co.jp/books/book/2838) (in Japanese): This book contains a detailed explanation of Graphillion and ZDD, and recommended for those who want to master Graphillion.\n"
       ]
     }
   ]
