Colaboratory を使用して作成しました

--- a/ja/07_answering_path_query.ipynb
+++ b/ja/07_answering_path_query.ipynb
@@ -7,72 +7,75 @@
       "display_name": "Python 3"
     },
     "colab": {
-      "name": "07_answering_path_query.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eMBFMjmVsP2e",
+        "id": "view-in-github",
         "colab_type": "text"
       },
       "source": [
-        "# Graphillionによる最適化\n",
-        "\n",
-        "この章ではGraphillionの機能を用いて，いくつかの複合的な制約を満たす，最適な経路を求める**最適化問題**を解く方法を紹介します．"
+        "<a href=\"https://colab.research.google.com/github/yurahuna/graphillion_tutorial/blob/master/ja/07_answering_path_query.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4SZ4r0UjsP2h",
-        "colab_type": "text"
+        "id": "eMBFMjmVsP2e"
       },
       "source": [
-        "## 問題設定\n",
+        "# Optimization with Graphillion\n",
         "\n",
-        "以下の図のようなグラフを考えます．グラフの各辺に数字が付与されていることに注意してください．この数字は辺の**重み**を表現しています．\n",
-        "\n",
-        "![重み付きグラフ](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/07/graph.png?raw=1)\n",
-        "\n",
-        "このグラフ上の頂点1からスタートして，頂点2, 6をめぐる最長・最短の巡回路を求めてみましょう．なお，巡回路の長さは通過した辺の重みの和とします．また，ある辺は順回路中で一度しか通過できないものとします．"
+        "This chapter shows how to use Graphillion to solve **optimization problems** to find the optimal path that satisfies several complex constraints."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yTV_Hc_IsP2j",
-        "colab_type": "text"
+        "id": "4SZ4r0UjsP2h"
       },
       "source": [
-        "## 初期化，グラフ集合の作成\n",
+        "## Problem Setting\n",
         "\n",
-        "まずこれまでと同様に`GraphSet`モジュールをインポートし，`GraphSet.set_universe()`メソッドによって`GraphSet`を初期化します．"
+        "Consider the graph shown in the figure below. Note that each edge of the graph has a number attached to it. This number represents the **weight** of the edge.\n",
+        "\n",
+        "![weighted graph](https://github.com/nsnmsak/graphillion_tutorial/blob/master/ja/img/07/graph.png?raw=1)\n",
+        "\n",
+        "Starting from vertex 1 on this graph, let us find the longest and shortest cycles containing vertices 2 and 6. The length of the cycle is the sum of the weights of the edges passed. Also, an edge is assumed to be traversed only once in the cycle."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yTV_Hc_IsP2j"
+      },
+      "source": [
+        "## Initialization, creation of graph set\n",
+        "\n",
+        "First, import the `GraphSet` module as before and initialize the `GraphSet` using the `GraphSet.set_universe()` method."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FbkvwhoLsRTJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FbkvwhoLsRTJ"
       },
       "source": [
         "!pip install graphillion\n",
         "!git clone https://github.com/nsnmsak/graphillion_tutorial\n",
         "!cp graphillion_tutorial/ja/tutorial_util.py ."
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "woUZMjthsP2k",
-        "colab_type": "code",
-        "colab": {}
+        "id": "woUZMjthsP2k"
       },
       "source": [
         "from graphillion import GraphSet, tutorial\n",
@@ -81,78 +84,69 @@
         "GraphSet.set_universe(tutorial.grid(2, 2))\n",
         "draw_universe()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Cs-_4x6xsP2r",
-        "colab_type": "text"
+        "id": "Cs-_4x6xsP2r"
       },
       "source": [
-        "次に`GraphSet`オブジェクトを作成します．今回は巡回路を求めたいので，まずはすべての巡回路の集合を表す`GraphSet`を作成します．"
+        "Next, create a `GraphSet` object. In this case, we want to compute cycles, so we first create a `GraphSet` that represents the set of all cycles."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ya9_-tf9sP2s",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ya9_-tf9sP2s"
       },
       "source": [
         "cycles = GraphSet.cycles()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B7j8UQNrsP2v",
-        "colab_type": "text"
+        "id": "B7j8UQNrsP2v"
       },
       "source": [
-        "こうして作られた`cycles`は，すべての巡回路を含む`GraphSet`オブジェクトです．今回必要なのは頂点1, 2, 6を含む巡回路なので，ここからさらに`gs.including()`メソッドによって絞り込みを行います．"
+        "The resulting `cycles` is a `GraphSet` object containing all the cycles. Since we need a cycle that includes vertices 1, 2, and 6, we use the `gs.including()` method to further refine the cycle."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KmoLnG5qsP2w",
-        "colab_type": "code",
-        "colab": {}
+        "id": "KmoLnG5qsP2w"
       },
       "source": [
         "cycles = cycles.including(1).including(2).including(6)\n",
         "len(cycles)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7gi036bLsP2z",
-        "colab_type": "text"
+        "id": "7gi036bLsP2z"
       },
       "source": [
-        "次にここから辺重みの和を最大・最小とする巡回路をそれぞれ求めてみましょう．どちらもイテレータを用いることで簡単に選択することができます．"
+        "Next, let us find the cycles with the largest and smallest sum of edge weights, respectively. Both can be easily selected by using the iterator."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AopmBM5BsP20",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AopmBM5BsP20"
       },
       "source": [
-        "edge_weights = { # 辺重みの設定．\n",
+        "edge_weights = { # weights of edges\n",
         "    (1, 2): 4,\n",
         "    (1, 4): 1,\n",
-        "    (2, 3): 1,    \n",
+        "    (2, 3): 1,\n",
         "    (2, 5): 3,\n",
         "    (3, 6): 5,\n",
         "    (4, 5): 1,\n",
@@ -169,25 +163,22 @@
         "draw_subgraph(min_cycle)\n",
         "draw_subgraph(max_cycle)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LJmY3sHGsP22",
-        "colab_type": "text"
+        "id": "LJmY3sHGsP22"
       },
       "source": [
-        "条件を追加するとさらに複雑な計算を行うこともできます．１, 2, 6は通過するけど，3と7のどちらかしか通らない最長の巡回路を求めてみましょう．こちらも`GraphSet`の演算を組み合わせることで簡単に実現できます．"
+        "More complex calculations can be performed by adding additional conditions: let's find the longest cycle that passes through 1, 2, and 6, but only through either 3 or 7. This can also be easily achieved by combining operations in a `GraphSet`."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WSK0lRajsP22",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WSK0lRajsP22"
       },
       "source": [
         "cycles = GraphSet.cycles()\n",
@@ -198,21 +189,20 @@
         "max_cycle = next(cycles.max_iter(weights=edge_weights))\n",
         "draw_subgraph(max_cycle)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ggCeV22wsP25",
-        "colab_type": "text"
+        "id": "ggCeV22wsP25"
       },
       "source": [
-        "Graphillionを用いた最適化法の特徴として，辺の重みを変更して問題を解き直すのが容易という点が挙げられます．既存の最適化問題用のソルバーでは，辺の重みが変化すると最適化問題を再度解き直す必要がありました．一方でGraphillionはグラフの集合 `gs`を再利用して最適化問題を解くことができるので，重みが変わっただけであれば非常に高速に解を求めなおすことができます．この特徴により，Graphillionは重みが変化しつつ繰り返し最適化問題を解かなければならない場面で効果を発揮します．\n",
+        "One of the features of optimization methods using Graphillion is that it is easy to change the edge weights and re-solve the problem. Existing solvers for optimization problems require re-solving the optimization problem when the edge weights are changed. On the other hand, Graphillion can solve optimization problems by reusing the set of graphs `gs`, so it can solve the problem very quickly if only the weights are changed. This feature makes Graphillion effective in situations where optimization problems must be solved repeatedly with changing weights.\n",
         "\n",
-        "## この章のまとめ\n",
+        "## Summary of this chapter\n",
         "\n",
-        "この章ではGraphillionを用いて最適化問題を解く例を紹介しました．最適化問題を解くことに限定すればGraphillion以外にも有用なツールは多数存在します．一方で，ただ最適化するだけでなく，適宜条件を追加したり，解をいくつも取り出したりといった柔軟さがGraphillionには備わっています．[次章](08_network_reliability.ipynb)ではより複雑な問題をGraphillionを使って解く事例を紹介します．\n"
+        "In this chapter, we introduced examples of optimization problems solved using Graphillion. There are many useful tools other than Graphillion that are limited to solving optimization problems. On the other hand, Graphillion provides the flexibility to not only optimize, but also to add conditions as needed, extract multiple solutions, and so on. In [next chapter](08_network_reliability.ipynb), we will introduce an example of solving a more complex problem using Graphillion."
       ]
     }
   ]
