Colaboratory を使用して作成しました

--- a/ja/09_practical_guide.ipynb
+++ b/ja/09_practical_guide.ipynb
@@ -28,7 +28,7 @@
         "id": "Tfq-He6L6Jtz"
       },
       "source": [
-        "# Getting Started with Graphillion\n",
+        "# Practical Guide for Graphillion\n",
         "\n",
         "This chapter introduces practical know-how for efficiently solving graph-related problems using Graphillion.\n",
         "\n",
